updated with overflow auto so page will show correctly when scrolled out.

--- a/about.css
+++ b/about.css
@@ -1,5 +1,6 @@
 body {
     background-color: #6cebf7;
+    overflow:auto;
     }
     
     #mainnav {
